# WestEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
Project/: Project.sln  Project.vcxproj  main.cpp
Project/WestEngine/: InputManager.cpp  WestEngine.vcxproj  WestEngine.vcxproj.filters
Project/WestEngine/Dependencies/glad/: gl.h
Project/WestEngine/Private/: Animation.cpp  AudioSourceComponent.cpp  BoxColliderComponent.cpp  Camera2D.cpp  GameObject.cpp  IndexBuffer.cpp  InputManager.cpp  PhysicsManager.cpp  RenderManager.cpp  RigidBodyComponent.cpp  Scene.cpp  Shader.cpp  SoundManager.cpp  SpriteAnimatorComponent.cpp  SpriteRenderer.cpp  SpriteRendererComponent.cpp  StateManager.cpp  Texture.cpp  Transform.cpp  Utility.cpp  VertexArray.cpp  VertexBuffer.cpp  WestEngine.cpp  WindowManager.cpp
Project/WestEngine/Public/: Animation.h  AnimationTypes.h  AudioSourceComponent.h  BoxColliderComponent.h  Camera2D.h  Component.h  Debug.h  Engine.h  EngineTypes.h  Gameobject.h  IGameState.h  IndexBuffer.h  InputManager.h  PhysicsManager.h  RenderManager.h  RigidbodyComponent.h  Scene.h  Shader.h  SoundManager.h  SpriteAnimatorComponent.h  SpriteRenderer.h  SpriteRendererComponent.h  StateManager.h  Texture.h  Transform.h  Utility.h  VertexArray.h  VertexBuffer.h  WestEngine.h  WindowManager.h
Project/test/: GameTypes.h  MainGameState.cpp  MainGameState.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h  TestScene.cpp  TestScene.h  main.cpp  test.vcxproj  test.vcxproj.filters
Project/test/Shaders/: simple.frag  simple.vert  sprite.vert
WestEngine/: WestEngine.vcxproj
artifacts/pix/: rendergraph-dx12-events.csv
artifacts/renderdoc/: rendergraph-vulkan.xml
cmake/: CompilerOptions.cmake  ShaderCompile.cmake  ThirdParty.cmake
engine/: CMakeLists.txt
engine/core/: Assert.h  Core.h  Logger.cpp  Logger.h  Profiler.h  Timer.cpp  Timer.h  Types.h
engine/core/Memory/: LinearAllocator.cpp  LinearAllocator.h  MemoryUtils.h  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h
engine/core/Threading/: TaskSystem.cpp  TaskSystem.h
engine/editor/: ImGuiPass.cpp  ImGuiPass.h  ImGuiRenderer.cpp  ImGuiRenderer.h  PostProcessingPresets.cpp  PostProcessingPresets.h  RuntimeControlPanel.cpp  RuntimeControlPanel.h  RuntimeRenderSettings.h  TelemetryOverlay.cpp  TelemetryOverlay.h
engine/editor/Profiler/: FrameTelemetry.cpp  FrameTelemetry.h  GPUTimerManager.cpp  GPUTimerManager.h
engine/platform/: IApplication.h  IWindow.h  PlatformDetect.h
engine/platform/win32/: PixGpuCapturerLoader.cpp  PixGpuCapturerLoader.h  PixProgrammaticCapture.cpp  PixProgrammaticCapture.h  RenderDocCapture.cpp  RenderDocCapture.h  Win32Application.cpp  Win32Application.h  Win32Headers.h  Win32Window.cpp  Win32Window.h
engine/render/Passes/: BokehDOFPass.cpp  BokehDOFPass.h  BufferCopyPass.cpp  BufferCopyPass.h  DeferredLightingPass.cpp  DeferredLightingPass.h  ForwardTexturedQuadPass.cpp  ForwardTexturedQuadPass.h  GBufferPass.cpp  GBufferPass.h  GPUDrivenCullingPass.cpp  GPUDrivenCullingPass.h  SSAOPass.cpp  SSAOPass.h  SceneDraw.h  ShadowMapPass.cpp  ShadowMapPass.h  ToneMappingPass.cpp  ToneMappingPass.h
engine/render/RenderGraph/: CommandListPool.cpp  CommandListPool.h  RenderGraph.cpp  RenderGraph.h  RenderGraphCompiler.cpp  RenderGraphCompiler.h  RenderGraphPass.h  RenderGraphResource.h  TransientResourcePool.cpp  TransientResourcePool.h
engine/rhi/: RHIFactory.cpp
engine/rhi/common/: BindlessPool.cpp  BindlessPool.h  DeferredDeletionQueue.cpp  DeferredDeletionQueue.h  FormatConversion.cpp  FormatConversion.h  TexturedQuadShaderData.h  TriangleShaderData.h
engine/rhi/dx12/: DX12Buffer.cpp  DX12Buffer.h  DX12CommandList.cpp  DX12CommandList.h  DX12Device.cpp  DX12Device.h  DX12Fence.cpp  DX12Fence.h  DX12Helpers.h  DX12MemoryAllocator.cpp  DX12MemoryAllocator.h  DX12Pipeline.cpp  DX12Pipeline.h  DX12Queue.cpp  DX12Queue.h  DX12Sampler.cpp  DX12Sampler.h  DX12Semaphore.h  DX12SwapChain.cpp  DX12SwapChain.h  DX12Texture.cpp  DX12Texture.h  DX12TimestampQueryPool.cpp  DX12TimestampQueryPool.h
engine/rhi/interface/: IRHIBuffer.h  IRHICommandList.h  IRHIDevice.h  IRHIFence.h  IRHIPipeline.h  IRHIQueue.h  IRHISampler.h  IRHISemaphore.h  IRHISwapChain.h  IRHITexture.h  IRHITimestampQueryPool.h  RHIDescriptors.h  RHIEnums.h  RHIFactory.h  RHIFormatUtils.h
engine/rhi/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.cpp  VulkanFence.h  VulkanHelpers.h  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanQueue.cpp  VulkanQueue.h  VulkanSampler.cpp  VulkanSampler.h  VulkanSemaphore.cpp  VulkanSemaphore.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTimestampQueryPool.cpp  VulkanTimestampQueryPool.h
engine/scene/: Camera.cpp  Camera.h  FreeLookCameraController.cpp  FreeLookCameraController.h  ImageData.cpp  ImageData.h  Material.h  MeshLoader.cpp  MeshLoader.h  SceneAsset.cpp  SceneAsset.h  SceneAssetLoader.cpp  SceneAssetLoader.h  SceneGraph.cpp  SceneGraph.h  SceneMath.h  TextureAssetData.cpp  TextureAssetData.h
engine/shader/: PSOCache.cpp  PSOCache.h  ShaderCompiler.cpp  ShaderCompiler.h
shaders/: BokehDOF.slang  DeferredLighting.slang  GBuffer.slang  GPUDrivenCulling.slang  IBL.slang  ImGui.slang  PBR.slang  SSAO.slang  ShadowMap.slang  TexturedQuad.slang  ToneMapping.slang
shaders/Common/: FrameConstants.slang  GlobalBindless.slang
tests/: CMakeLists.txt  TestAssert.h
tests/core/: test_linear_allocator.cpp  test_pool_allocator.cpp  test_stack_allocator.cpp
tests/render/: test_render_graph_compile.cpp
tests/rhi/: test_bindless_pool.cpp  test_deferred_deletion_queue.cpp
tests/shader/: test_extract_metadata.py  test_pso_cache_hash.cpp
tools/: extract_metadata.py
